git commit -m "css"

--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
             <h5 style="position: relative; left: 100px">Navigation</h5>
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="main.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="services.html">Services</a>
@@ -140,7 +140,7 @@
 
     <script>
       // Initialize EmailJS
-      emailjs.init("p0HeQnmMI9PaHjHwo");
+      emailjs.init("33J_nhX94ic4rqhf_");
 
       // Attach a submit event listener to your form
       document
@@ -161,7 +161,7 @@
           };
 
           // Send the email
-          emailjs.send("service_9iey7v6", "template_e0uzcm9", params).then(
+          emailjs.send("service_10wpldt", "template_yl90pwa", params).then(
             function (response) {
               alert("Message Sent Successfully");
               console.log("SUCCESS!", response.status, response.text);
