--- a/services.html
+++ b/services.html
@@ -498,7 +498,7 @@
             <h5 style="position: relative; left: 100px">Navigation</h5>
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="main.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
