--- a/main.html
+++ b/main.html
@@ -22,45 +22,51 @@
   </head>
   <body>
     <!-- HEADER START -->
-    <nav class="navbar navbar-expand-lg navbar-custom fixed-top scrolled">
-      <a class="navbar-brand" href="#">
-        <img src="./images/logo.png" alt="logo.png" 
-        href="#home"
-        style="height: 50px; 
-        margin-left: 30%;" 
-        />
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav" style="margin-right: 10%;">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#"><b>Home</b></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html"><b>Services</b></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#reviewsCarousel"><b>Reviews</b></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html"><b>Contact</b></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-custom fixed-top scrolled">
+  <a class="navbar-brand" href="#">
+    <img src="./images/logo.png" alt="logo.png" 
+    href="#home"
+    style="height: 50px; 
+    margin-left: 30%;" 
+    />
+  </a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNav" style="margin-right: 10%;">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#"><b>Home</b></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="services.html"><b>Services</b></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#reviewsCarousel"><b>Reviews</b></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html"><b>Contact</b></a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-    <div class="image-section">
-      <h1 style="color: white;">Accounting For Prosperity!</h1>
+<div class="container">
+  <div class="row align-items-center">
+    <div class="col-lg-4">
+      <div class="image-section">
+        <h1 style="color: white;">Accounting For Prosperity!</h1>
+      </div>
+    </div>
+    <div class="col-lg-4 image-section">
       <p style="color: #D3D3D3;">
         Welcome to our accounting firm, where your financial success is our top
         priority. We offer a wide range of services tailored to meet your unique
@@ -69,7 +75,12 @@
       </p>
       <button class="btn btn-lg" onclick="window.location.href='services.html'">Find Out More!</button>
     </div>
-    <!-- HEADER END -->
+    <div class="col-lg-4">
+      <img src="./images/hero.png" alt="Hero Image" class="img-fluid">
+    </div>
+  </div>
+</div>
+<!-- HEADER END -->
 
     <!-- ABOUT US START -->
     <div class="container my-5">
