--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
   <a class="navbar-brand" href="#">
     <img src="./images/logo.png" alt="logo.png" 
     href="#home"
-    style="height: 50px; 
+    style="height: 70px; 
     margin-left: 30%;" 
     />
   </a>
@@ -63,11 +63,11 @@
   <div class="row align-items-center">
     <div class="col-lg-4">
       <div class="image-section">
-        <h1 style="color: white;">Accounting For Prosperity!</h1>
+        <h1>Accounting For Prosperity!</h1>
       </div>
     </div>
     <div class="col-lg-4 image-section">
-      <p style="color: #D3D3D3;">
+      <p>
         Welcome to our accounting firm, where your financial success is our top
         priority. We offer a wide range of services tailored to meet your unique
         business needs. Let us help you streamline your accounting processes,
@@ -87,22 +87,22 @@
       <div class="row">
         <!-- About Us Content -->
         <div class="col-lg-6 mb-4">
-          <h2 style="color: white;">About Us</h2>
-          <p style="color: #D3D3D3;">
+          <h2>About Us</h2>
+          <p>
             SAAR Professional Consultants Inc. is more than just a business. It
-            is a vision of providing <b style="color: white;">high-quality and affordable</b> financial
+            is a vision of providing <b>high-quality and affordable</b> financial
             services to individuals and businesses in Brampton, GTA and beyond.
-            Founded in 2018 by <b style="color: white;">Rohit Goyal</b>, a <b style="color: white;">certified professional accountant</b>
+            Founded in 2018 by <b>Rohit Goyal</b>, a <b>certified professional accountant</b>
             with over 15 years of experience in the industry, SAAR Professional
-            Consultants Inc. has grown to become a <b style="color: white;">trusted and reputable</b> name in
+            Consultants Inc. has grown to become a <b>trusted and reputable</b> name in
             the market. At SAAR Professional Consultants Inc., we believe that
-            every client deserves our <b style="color: white;">personal attention</b> and <b style="color: white;">tailored advice</b>. We
+            every client deserves our <b>personal attention</b> and <b>tailored advice</b>. We
             take the time to listen to your needs, understand your situation and
             offer you the best solutions for your financial goals. We also
             strive to keep up with the latest trends and technologies in the
-            field, so that we can provide you with the most <b style="color: white;">up-to-date and
+            field, so that we can provide you with the most <b>up-to-date and
             accurate</b> information and guidance. We are not just your service
-            providers, we are your <b style="color: white;">partners</b> in your financial journey. We are
+            providers, we are your <b>partners</b> in your financial journey. We are
             here to support you, educate you and empower you to make informed
             decisions for your personal or business finances. We are also here
             to celebrate your successes and help you overcome any challenges
@@ -123,7 +123,7 @@
 
     <!-- SERVICES START -->
     <div class="container my-5">
-  <h2 class="text-center mb-4" style="color: white;">Services We Provide</h2>
+  <h2 class="text-center mb-4">Services We Provide</h2>
   <div class="row">
     <!-- Service 1 -->
     <div class="col-md-4 mb-4">
@@ -186,7 +186,7 @@
       </div>
     </div>
 
-    <a href="services.html" class="btn btn-explore"><b style="color: white;">Explore More</b></a>
+    <a href="services.html" class="btn btn-explore"><b>Explore More</b></a>
     <!-- SERVICES END -->
 
     <!-- TESTIMONIALS START -->
