--- a/services.html
+++ b/services.html
@@ -61,8 +61,8 @@
     <!-- HEADER END -->
     <!-- SERVICES START -->
     <div class="container my-5" id="services">
-      <h1 class="text-center mb-4" style="color: white">Services We Provide</h1>
-      <p style="color: #d3d3d3">
+      <h1 class="text-center mb-4">Services We Provide</h1>
+      <p>
         Since our inception in 2018, we have been committed to providing
         top-tier accounting services to individuals and businesses alike. Our
         extensive range of over 10 services is designed to meet diverse
@@ -92,7 +92,7 @@
                 data-target="#collapseOne"
                 aria-expanded="true"
                 aria-controls="collapseOne"
-                style="color: white"
+                style="color: black"
               >
                 Bookkeeping
               </button>
@@ -124,7 +124,7 @@
                 data-target="#collapseTwo"
                 aria-expanded="false"
                 aria-controls="collapseTwo"
-                style="color: white"
+                style="color: black"
               >
                 Corporation Taxes
               </button>
@@ -156,7 +156,7 @@
                 data-target="#collapseOne"
                 aria-expanded="true"
                 aria-controls="collapseOne"
-                style="color: white"
+                style="color: black"
               >
                 Business Consulting
               </button>
@@ -188,7 +188,7 @@
                 data-target="#collapseTwo"
                 aria-expanded="false"
                 aria-controls="collapseTwo"
-                style="color: white"
+                style="color: black"
               >
                 Personal Taxes
               </button>
@@ -221,7 +221,7 @@
                 data-target="#collapseOne"
                 aria-expanded="true"
                 aria-controls="collapseOne"
-                style="color: white"
+                style="color: black"
               >
                 Developing Internal Controls
               </button>
@@ -254,7 +254,7 @@
                 data-target="#collapseTwo"
                 aria-expanded="false"
                 aria-controls="collapseTwo"
-                style="color: white"
+                style="color: black"
               >
                 Tax Planning
               </button>
@@ -287,7 +287,7 @@
                 data-target="#collapseOne"
                 aria-expanded="true"
                 aria-controls="collapseOne"
-                style="color: white"
+                style="color: black"
               >
                 Preparing Business Plans
               </button>
@@ -320,7 +320,7 @@
                 data-target="#collapseTwo"
                 aria-expanded="false"
                 aria-controls="collapseTwo"
-                style="color: white"
+                style="color: black"
               >
                 Financial Planning
               </button>
@@ -354,7 +354,7 @@
                 data-target="#collapseOne"
                 aria-expanded="true"
                 aria-controls="collapseOne"
-                style="color: white"
+                style="color: black"
               >
                 Corporate Tax Filing
               </button>
@@ -387,7 +387,7 @@
                 data-target="#collapseTwo"
                 aria-expanded="false"
                 aria-controls="collapseTwo"
-                style="color: white"
+                style="color: black"
               >
                 Budgeting
               </button>
@@ -420,7 +420,7 @@
                 data-target="#collapseOne"
                 aria-expanded="true"
                 aria-controls="collapseOne"
-                style="color: white"
+                style="color: black"
               >
                 CRA Audits
               </button>
@@ -453,7 +453,7 @@
                 data-target="#collapseTwo"
                 aria-expanded="false"
                 aria-controls="collapseTwo"
-                style="color: white"
+                style="color: black"
               >
                 CashFlow Projections and Forecasts
               </button>
