--- a/main.html
+++ b/main.html
@@ -350,7 +350,7 @@
       </div>
       <!-- Navigation Links -->
       <div class="col-md-4">
-        <h5 style="position: relative; left: 100px;">Navigation</h5>
+        <h5 class="navbar-heading">Navigation</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
             <a class="nav-link active" href="#">Home</a>
