--- a/main.html
+++ b/main.html
@@ -76,7 +76,7 @@
       <button class="btn btn-lg" onclick="window.location.href='services.html'">Find Out More!</button>
     </div>
     <div class="col-lg-4">
-      <img src="./images/hero.png" alt="Hero Image" class="img-fluid">
+      <img src="./images/logo.png" alt="Hero Image" class="img-fluid">
     </div>
   </div>
 </div>
@@ -385,7 +385,10 @@
     document.querySelector(".navbar-custom").classList.remove("scrolled");
   }
 }
-
+    </script>
+    <!-- SlideUp Animation JS -->
+    <script>
+      
     </script>
   </body>
 </html>
