--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
           src="./images/logo.png"
           alt="logo.png"
           style="height: 50px"
-          href="#home"
+          href="main.html"
         />
       </a>
       <button
